[gd_scene load_steps=2 format=2]

[ext_resource path="res://scripts/MaskCommunicator.gd" type="Script" id=1]

[node name="MaskCommunicator" type="Node"]
script = ExtResource( 1 )

[node name="MainRequest" type="HTTPRequest" parent="."]

[node name="RequestNodes" type="Node" parent="."]
